# cc-assignment-2023

./: .env  .gitignore  CONFIGURATIONS.md  Cargo.toml  DEMO-INSTRUCTIONS.md  Dockerfile  Makefile  README.md  docker-compose.services.yml  docker-compose.to.yml  entrypoint.sh
.sqlx/: query-0303f0bc42387ff7bb4b1c8c5feb47fa83e6cfff7d97797504cfb9635e74e669.json  query-92564372eb446065b0e80a766a908f42442a0dfc664d72ba924a9c6db897d1f0.json  query-fb2e689691dd7c7d94bf527e506c126f429701cb0566528ded7b369e0698b379.json
database/: docker-compose.yml
database/ddl/: notification.sql  notification_ground_truth.sql  users.sql
event-hash/: Cargo.toml
event-hash/src/: lib.rs
experiment-producer/: Cargo.toml  README.md  example_config.json  readme.txt
experiment-producer/auth/: .gitignore  client-ssl.properties  kafka.truststore.pkcs12
experiment-producer/log-queries/: get-experiment-temperature.sh  get-experiments.sh
experiment-producer/schemas/: experiment_document.avsc  sensor_temperature_measured.avro
experiment-producer/src/: config.rs  database.rs  events.rs  main.rs  metric.rs  simulator.rs  time.rs
http-load-generator/: Cargo.toml  hosts.docker.json  hosts.json  readme.txt
http-load-generator/src/: consume.rs  consumer.rs  experiment.rs  generator.rs  main.rs  metric.rs  receiver.rs  request.rs  requests.rs
notifications-service/: .env  Cargo.toml  README.md  ca.crt  readme.txt
notifications-service/src/: api.rs  generate_token.rs  jwt.rs  main.rs  metric.rs  store.rs
notifier/: Cargo.toml  readme.txt
notifier/src/: consume.rs  main.rs
observabiity/: .env  docker-compose.yml  prometheus-config.yml
observability/: docker-compose.yml  error_overview.json  group_personal.json  group_view.json  overview.json  prometheus-config.yml
scripts/: build.sh  generate-group-tokens.sh  push.sh  save_env.sh  setup_env.sh
src/: main.rs
test-to-api/: Cargo.toml  readme.txt
test-to-api/src/: consumer.rs  main.rs
