[package]
name = "http-load-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"]}
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
clap = { version = "4", features = ["derive", "cargo"]}
apache-avro = "0.15"
serde = { version = "1.0.183", features = ["derive"]}
futures = "0.3.28"
rand = "0.8.5"
async-broadcast = "0.5.1"
serde_json = "1.0.107"
prometheus-client = "0.21.2"
actix-web = "4.4.0"
ctrlc = "3.4.1"
