[package]
name = "test-to-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.2"
poem-openapi = { version = "1.2", features = ["swagger-ui"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dashmap = "5.5.3"
serde = { version = "1.0.183", features = ["derive"]}
serde_json = "1.0.107"
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
apache-avro = "0.15"
clap = { version = "4", features = ["derive", "cargo"]}
futures = "0.3.28"
